// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn component Should render according to the snapshot while authorization status is pending 1`] = `
<div>
  <div
    class="user-page"
  >
    <header
      class="page-header user-page__head"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <h1
        class="page-title user-page__title"
      >
        Sign in
      </h1>
    </header>
    <div
      class="sign-in user-page__content"
    >
      <form
        action="#"
        class="sign-in__form sign-in__form--disabled"
      >
        <div
          class="sign-in__fields"
        >
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="username"
              class="sign-in__input"
              disabled=""
              id="user-email"
              name="user-email"
              placeholder="Email address"
              required=""
              type="email"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-email"
            >
              Email address
            </label>
          </div>
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="current-password"
              class="sign-in__input"
              disabled=""
              id="user-password"
              name="user-password"
              placeholder="Password"
              required=""
              type="password"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-password"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="sign-in__submit"
        >
          <button
            class="sign-in__btn"
            disabled=""
            type="submit"
          >
            Sign in
          </button>
        </div>
      </form>
    </div>
    <footer
      class="page-footer"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--light logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`SignIn component Should render according to the snapshot while authorization status is unset or rejected 1`] = `
<div>
  <div
    class="user-page"
  >
    <header
      class="page-header user-page__head"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <h1
        class="page-title user-page__title"
      >
        Sign in
      </h1>
    </header>
    <div
      class="sign-in user-page__content"
    >
      <form
        action="#"
        class="sign-in__form"
      >
        <div
          class="sign-in__fields"
        >
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="username"
              class="sign-in__input"
              id="user-email"
              name="user-email"
              placeholder="Email address"
              required=""
              type="email"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-email"
            >
              Email address
            </label>
          </div>
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="current-password"
              class="sign-in__input"
              id="user-password"
              name="user-password"
              placeholder="Password"
              required=""
              type="password"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-password"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="sign-in__submit"
        >
          <button
            class="sign-in__btn"
            type="submit"
          >
            Sign in
          </button>
        </div>
      </form>
    </div>
    <footer
      class="page-footer"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--light logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`SignIn component Should render according to the snapshot while authorization status is unset or rejected 2`] = `
<div>
  <div
    class="user-page"
  >
    <header
      class="page-header user-page__head"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <h1
        class="page-title user-page__title"
      >
        Sign in
      </h1>
    </header>
    <div
      class="sign-in user-page__content"
    >
      <form
        action="#"
        class="sign-in__form"
      >
        <div
          class="sign-in__fields"
        >
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="username"
              class="sign-in__input"
              id="user-email"
              name="user-email"
              placeholder="Email address"
              required=""
              type="email"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-email"
            >
              Email address
            </label>
          </div>
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="current-password"
              class="sign-in__input"
              id="user-password"
              name="user-password"
              placeholder="Password"
              required=""
              type="password"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-password"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="sign-in__submit"
        >
          <button
            class="sign-in__btn"
            type="submit"
          >
            Sign in
          </button>
        </div>
      </form>
    </div>
    <footer
      class="page-footer"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--light logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`SignIn component Should render according to the snapshot while authorization status is unset or rejected 3`] = `
<div>
  <div
    class="user-page"
  >
    <header
      class="page-header user-page__head"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <h1
        class="page-title user-page__title"
      >
        Sign in
      </h1>
    </header>
    <div
      class="sign-in user-page__content"
    >
      <form
        action="#"
        class="sign-in__form"
      >
        <div
          class="sign-in__fields"
        >
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="username"
              class="sign-in__input"
              id="user-email"
              name="user-email"
              placeholder="Email address"
              required=""
              type="email"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-email"
            >
              Email address
            </label>
          </div>
          <div
            class="sign-in__field"
          >
            <input
              autocomplete="current-password"
              class="sign-in__input"
              id="user-password"
              name="user-password"
              placeholder="Password"
              required=""
              type="password"
              value=""
            />
            <label
              class="sign-in__label visually-hidden"
              for="user-password"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="sign-in__submit"
        >
          <button
            class="sign-in__btn"
            type="submit"
          >
            Sign in
          </button>
        </div>
      </form>
    </div>
    <footer
      class="page-footer"
    >
      <div
        class="logo"
      >
        <a
          aria-current="page"
          class="logo__link logo__link--light logo__link--active"
          href="/"
        >
          <span
            class="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            class="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            class="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        class="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>
</div>
`;
